fix: background image - adjust the brightness and contrast

--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@
 
 .whole{
     background-color: #5D78A1;
-    opacity: 0.8;
-    background-image: url(images/books-5937823_960_720.webp);
-    background-position: left;
-   
+    /* opacity: 0.8; */
+    /* background-image: url("images/books-5937823_960_720.webp"); */
+    z-index: -2;
+    width: 100%;
 }
 .adm button{
     border-radius: 10px;
